cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp Leetcode_89_GrayCode.cpp Leetcode95.cpp Leetcode93.cpp Leetcode97.cpp Leetcode99.cpp Leetcode85.cpp Leetcode25.cpp Leetcode109.cpp Leetcode114.cpp Leetcode132.cpp Leetcode145.cpp Leetcode147.cpp Leetcode214.cpp Leetcode220.cpp Leetcode225.cpp Leetcode241.cpp Leetcode224.cpp Leetcode274.cpp Leetcode264.cpp Leetcode292.cpp Leetcode301.cpp BIT.cpp Leetcode307.cpp Leetcode309.cpp Leetcode310.cpp Leetcode327.cpp SegmentTree.cpp Leetcode332.cpp Leetcode330.cpp Leetcode343.cpp Leetcode338.cpp Leetcode336.cpp Test.cpp Leetcode368.cpp Leetcode365.cpp main862.cpp Leetcode372.cpp Leetcode377.cpp Leetcode398.cpp luogu/luogu1219.cpp luogu/luogu2392.cpp luogu/P1443.cpp)